feat: added settings fetch
