# src/server/docs/swagger.json
@@ -1,8 +1,20 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is the Weather API for a weather app system.",
+        "title": "Weather API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
+        }
     },
+    "basePath": "/v1",
     "paths": {
         "/authentication/login": {
             "post": {
@@ -144,6 +156,55 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/store.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/users/{id}/settings": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Retrieves the settings for a user by their ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Fetches user settings",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/store.Settings"
                         }
                     },
                     "400": {
@@ -741,6 +802,37 @@
                 }
             }
         },
+        "store.Settings": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "speed_format": {
+                    "$ref": "#/definitions/store.SpeedFormat"
+                },
+                "temp_format": {
+                    "$ref": "#/definitions/store.TempFormat"
+                },
+                "time_format": {
+                    "$ref": "#/definitions/store.TimeFormat"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "store.SpeedFormat": {
+            "type": "string",
+            "enum": [
+                "kmph",
+                "mph"
+            ],
+            "x-enum-varnames": [
+                "Kmph",
+                "Mph"
+            ]
+        },
         "store.Sys": {
             "type": "object",
             "properties": {
@@ -748,6 +840,28 @@
                     "type": "string"
                 }
             }
+        },
+        "store.TempFormat": {
+            "type": "string",
+            "enum": [
+                "celsius",
+                "fahrenheit"
+            ],
+            "x-enum-varnames": [
+                "Celsius",
+                "Fahrenheit"
+            ]
+        },
+        "store.TimeFormat": {
+            "type": "string",
+            "enum": [
+                "24h",
+                "12h"
+            ],
+            "x-enum-varnames": [
+                "TwentyFourHour",
+                "TwelveHour"
+            ]
         },
         "store.User": {
             "type": "object",
@@ -884,6 +998,14 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "Use your API key in the Authorization header",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
